--- a/roles/vm_revert/tasks/main.yml
+++ b/roles/vm_revert/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: setting last snapshot variable
   ansible.builtin.set_fact:
-    last_snapshot: '{{ (vm_list.stdout_lines | last | split(" ")).1 }}'
+    last_snapshot: "{{ (vm_list.stdout_lines | map('regex_replace', '^ ', '') | select('match', snapshot_regex_test) | last | split(' ')).1 }}"
 
 - name: reverting kali vm to last snapshot
   ansible.builtin.command:
